--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-bar-chart></app-bar-chart>
+  <app-bar-chart [nameTab]=  "nombreTab"></app-bar-chart>
 </ion-content>
