--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-line-chart></app-line-chart>
+  <app-line-chart [nameTab]="nombreTab"></app-line-chart>
 </ion-content>
