--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
- <app-pie-chart></app-pie-chart>
+ <app-pie-chart [nameTab]="tabName"></app-pie-chart>
 </ion-content>
