--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -5,9 +5,24 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tab4</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- Mostrar u ocultar componentes según el segmento seleccionado -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <app-bar-chart [nameTab]="nombreTab"></app-bar-chart>
+      </ion-col>
+      <ion-col size="6">
+        <ion-row>
+          <ion-col size="12">
+            <app-line-chart [nameTab]="nombreTab"></app-line-chart>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <app-pie-chart [nameTab]="nombreTab"></app-pie-chart>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
